# SmartAttendance

./: .gitignore  AUDIO_FIXES.md  CMakelists.txt  Dockerfile  FULL_ANALYSIS.md  PROJECT_ARCHITECTURE_REPORT.md  SPIFFS_AUDIO_SETUP.md  activity_log - Copy.md  activity_log.md  add_extern_c.py  build_patched.py  build_workaround.bat  build_workaround.py  consumer_readiness_audit.md  flash_workaround.bat  fly.toml  generate_audio_files.py  generate_system_audio.py  idf_env_backup.sh  implementation_planv1.md  partitions.csv  project_audit.md  register.html  researchResult.txt  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32p4  update2  update3  walkthrough3.md
.github/workflows/: hf_sync.yml
components/espressif__esp-dsp/modules/kalman/ekf/common/: ekf.cpp
components/espressif__esp-dsp/modules/kalman/ekf_imu13states/: ekf_imu13states.cpp
components/sqlite3/: .component_hash  CMakeLists.txt  esp32.c
elecrow_examples/components/espressif__esp32_p4_function_ev_board/elecrow_ui/: elecrow_ui.c
main/: CMakeLists.txt  Kconfig.projbuild  config.h  idf_component.yml  main.c
main/audio/: minimp3.h
main/ble/: ble_registration.c  ble_registration.h
main/boards/: elecrow_p4_board.c  elecrow_p4_board.h
main/camera/: camera_driver.c  camera_driver.h  ov5647_autofocus.c  ov5647_autofocus.h
main/database/: db_manager.c  db_manager.h
main/detection/: face_alignment.c  face_alignment.h  face_detector.cpp  face_detector.h
main/display/: backlight.c  backlight.h  lcd_driver.c  lcd_driver.h  touch_driver.c  touch_driver.h
main/network/: cloud_sync.c  cloud_sync.h  ota_manager.c  ota_manager.h  sntp_sync.c  sntp_sync.h  wifi_ap_portal.cpp  wifi_ap_portal.h  wifi_manager.c  wifi_manager.h
main/ota/: ota_manager.c  ota_manager.h
main/power/: battery_monitor.c  battery_monitor.h
main/recognition/: feature_extractor.cpp  feature_extractor.h  recognizer.cpp  recognizer.h
main/storage/: sdcard_mount.c  sdcard_mount.h
main/ui/: lv_conf.h  ui_admin_setup.cpp  ui_admin_setup.h  ui_attendance.cpp  ui_attendance.h  ui_components.cpp  ui_components.h  ui_enrollment.cpp  ui_enrollment.h  ui_file_manager.cpp  ui_file_manager.h  ui_main.cpp  ui_main.h  ui_reports.cpp  ui_reports.h  ui_settings.cpp  ui_settings.h  ui_setup_wizard.cpp  ui_setup_wizard.h  ui_theme.cpp  ui_theme.h  ui_user_manager.cpp  ui_user_manager.h
main/utils/: queue_manager.c  queue_manager.h
scratch/: fix_newlines.py  get_task_dump.py  monitor.py  patch_main.py  patch_ui_screens.py  read_serial.py  run_monitor.py  serial_monitor.py  write_ui.py
telegram_bot/: .env.example  DEPLOYMENT.md  README.md  bot.py  db.py  requirements.txt
